# parallel-programming

./: .gitignore  .gitmodules  readme.md
cuda/: measurements.csv  readme.md  report.jl
hadoop/: measurements.csv  report.jl  setup.sh
hadoop/word-counter/word-counter/: Cargo.toml
hadoop/word-counter/word-counter/src/: mapper.rs  reducer.rs  single.rs
lab1/: makefile  program.c  readme.md  run_on_vcluster.sh
lab1/gnuplot/: composite_stats.sh  hw_send_single_node.gpi  ibsend_two_nodes.gpi  ping_pong.gpi  ssend_two_nodes.gpi
lab1/measurements/csv/: ibsend_single_node.csv  ibsend_two_nodes.csv
lab1/measurements/first-run/: ibsend_single_node-1.csv  ssend_single_node-2.csv  ssend_two_nodes-2.csv  ssend_two_nodes-3.csv
lab1/measurements/local-run/: ibsend_single_node-1.csv  ibsend_single_node-2.csv  ssend_single_node-1.csv  ssend_single_node-3.csv
lab1/measurements/second-run/: ibsend_single_node-2.csv  ibsend_two_nodes-2.csv  (+4 more)
lab1/src/: homework.c  hw_send.c  ibsend.c  ping_pong.c  ssend.c
lab2/: makefile  readme.md  run-med.sh  run.sh
lab2/data/: data.csv  slurm-17950252.out  vcluster.csv
lab2/src/: pi.c
openmp/homework/: bucket_size.jl  compare.sh  makefile  measure.cpp  measure.sh  perform_measurements.sh  plots.py  report.jl  test_bucket_size.sh
openmp/lab1/: makefile  measure.cpp
openmpi/lab2/: run-small.sh
part-1/: report.jl
part-1/lab1/: makefile
part-1/lab2/: readme.md  run-big.sh  run.sh
part-2/: makefile
part-2/lab1/: data.txt  measure_times.sh  readme.md  report.jl
part-2/lab2/: measure.cpp
part-2/src/: bucket_sort.c
(+33 files in other folders)
