[package]
name = "word-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
efflux = "2.0.1"

[[bin]]
doc = false
name = "wordcount_mapper"
path = "src/mapper.rs"

[[bin]]
doc = false
name = "wordcount_reducer"
path = "src/reducer.rs"
